--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,5 +1,7 @@
 <app-navbar></app-navbar>
 <app-hero></app-hero>
 <app-info-cards></app-info-cards>
-<app-asistente></app-asistente>
+<app-preguntas-frecuentes></app-preguntas-frecuentes>
+
 <app-footer></app-footer>
+<app-asistente></app-asistente>
